# anthropic-computer-use-modal

./: README.md  pyproject.toml
anthropic_computer_use_modal/: sandbox_manager.py
computer_use_modal/: __init__.py  app.py  demo.py  deploy.py  modal.py  sandbox_manager.py  streamlit.py
computer_use_modal/sandbox/: bash_manager.py  edit_manager.py  io.py  sandbox_manager.py
computer_use_modal/server/: messages.py  prompts.py  server.py
computer_use_modal/tools/: base.py  bash.py
computer_use_modal/tools/computer/: __init__.py  computer.py  types.py
computer_use_modal/tools/edit/: __init__.py  edit.py  types.py
computer_use_modal/vnd/anthropic/tools/: computer.py  edit.py  shared.py
